feat: email 模块完善